--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,7 +23,7 @@ $font-display: 'Josefin Sans', sans-serif;
             box-sizing: inherit; //dziedziczy po HTML
 }
 
-.html {
+html {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     font-size: 62.5%; // 10px / 16px = 62.5% -> 1rem = 10px
@@ -44,9 +44,4 @@ body {
     // 3. wiersz - wiersz uzależniony od szerokości układu (podczas zmiany szerokości widoku zmieniają się wymiary wiersza - zwęża się, rośnie)
     // 4, 5, 6 - wysokość wiersza uzależnione od jego zawartości
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-
-    & > * { // wszystkie bezpośrednie dzieci
-        padding: 4rem;
-        font-size: 3rem;
-    }
 }
